Major overhaul, simplification and 80% there