@@ -2,7 +2,6 @@
 setlocal enabledelayedexpansion
 
 set JAVAFX_PATH=Deps\javafx-sdk-17.0.18
-set SERVER_PATH=Server
 set CLIENT_PATH=client
 set OUT_PATH=bin\classes
 
@@ -12,7 +11,6 @@ echo Compiling Client...
 set SOURCES_FILE=%OUT_PATH%\sources.txt
 if exist "%SOURCES_FILE%" del "%SOURCES_FILE%"
 
-for /r "%SERVER_PATH%" %%f in (*.java) do echo %%f>>"%SOURCES_FILE%"
 for /r "%CLIENT_PATH%" %%f in (*.java) do echo %%f>>"%SOURCES_FILE%"
 
 javac --module-path "%JAVAFX_PATH%\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics -d "%OUT_PATH%" @"%SOURCES_FILE%"
@@ -23,7 +21,7 @@ if %errorlevel% equ 0 (
     if exist "%OUT_PATH%\Assets" rmdir /s /q "%OUT_PATH%\Assets"
     xcopy "%CLIENT_PATH%\Assets" "%OUT_PATH%\Assets" /E /I /Y >nul
     echo Starting client...
-    java --enable-native-access=javafx.graphics --sun-misc-unsafe-memory-access=allow --module-path "%JAVAFX_PATH%\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics -cp "%OUT_PATH%" client
+    java --enable-native-access=javafx.graphics --module-path "%JAVAFX_PATH%\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics -cp "%OUT_PATH%" client
     if %errorlevel% neq 0 (
         echo Retrying without unsafe-memory flag...
         java --enable-native-access=javafx.graphics --module-path "%JAVAFX_PATH%\lib" --add-modules javafx.controls,javafx.fxml,javafx.graphics -cp "%OUT_PATH%" client
